// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders correctly 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    />
    <div
      class="cache-izrm74-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r0:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly label 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
    </div>
    <div
      class="cache-izrm74-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":rc:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    />
    <div
      class="cache-izrm74-StyledToggle e1wstm612"
      data-checked="true"
      data-disabled="false"
      data-error="false"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r2:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="true"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    />
    <div
      class="cache-izrm74-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="true"
      data-error="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        disabled=""
        id=":r4:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-3cgt5r-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-3cgt5r-StyledIcon-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        test
        <sup>
          <svg
            class="cache-3cgt5r-StyledIcon-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
            />
          </svg>
        </sup>
      </div>
    </div>
    <div
      class="cache-izrm74-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r6:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label left 1`] = `
<DocumentFragment>
  .cache-1gksb9y-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.cache-1gksb9y-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-1gksb9y-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-3cgt5r-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-3cgt5r-StyledIcon-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-1gksb9y-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        test
        <sup>
          <svg
            class="cache-3cgt5r-StyledIcon-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
            />
          </svg>
        </sup>
      </div>
    </div>
    <div
      class="cache-izrm74-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r8:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with complex label 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        <span>
          Custom label rendered
        </span>
      </div>
    </div>
    <div
      class="cache-izrm74-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":rk:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
    </div>
    <div
      class="cache-izrm74-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":ri:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with error 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-ce8hur-StyledText {
  color: #b3144d;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
      <p
        class="cache-ce8hur-StyledText e13y3mga0"
      >
        error text
      </p>
    </div>
    <div
      class="cache-izrm74-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
      data-error="true"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":rr:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with helper 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-3l2mjz-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
      <p
        class="cache-3l2mjz-StyledText e13y3mga0"
      >
        This is a helper
      </p>
    </div>
    <div
      class="cache-izrm74-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":ro:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with labels on left 1`] = `
<DocumentFragment>
  .cache-1gksb9y-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.cache-1gksb9y-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-1gksb9y-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-1gksb9y-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
    </div>
    <div
      class="cache-izrm74-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":rg:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with non default size 1`] = `
<DocumentFragment>
  .cache-hfh15c-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-hfh15c-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 16.53px;
}

.cache-hfh15c-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-feze0p-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 40px;
  height: 20px;
}

.cache-feze0p-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-feze0p-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 12px;
  height: 12px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-feze0p-StyledToggle:focus-within,
.cache-feze0p-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-feze0p-StyledToggle[data-disabled='false']:active:after {
  width: 16.53px;
}

.cache-feze0p-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-feze0p-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-feze0p-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-feze0p-StyledToggle[data-checked='true']:focus-within,
.cache-feze0p-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-feze0p-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-feze0p-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-feze0p-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-feze0p-StyledToggle[data-error='true']:focus-within,
.cache-feze0p-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-feze0p-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-feze0p-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-feze0p-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-hfh15c-StyledLabel e1wstm610"
  >
    <div
      class="cache-155uuxj-Stack ehpbis70"
    />
    <div
      class="cache-feze0p-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":ra:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with tooltip 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-izrm74-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-izrm74-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-izrm74-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-izrm74-StyledToggle:focus-within,
.cache-izrm74-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-izrm74-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-izrm74-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.cache-izrm74-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.cache-izrm74-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-izrm74-StyledToggle[data-checked='true']:focus-within,
.cache-izrm74-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-izrm74-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-izrm74-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-izrm74-StyledToggle[data-error='true'] {
  background-color: #ffebf2;
}

.cache-izrm74-StyledToggle[data-error='true']:focus-within,
.cache-izrm74-StyledToggle[data-error='true']:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-izrm74-StyledToggle[data-error='true'][data-checked='true'] {
  background-color: #e51963;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'] {
  background-color: #fff3f7;
}

.cache-izrm74-StyledToggle[data-error='true'][data-disabled='true'][data-checked='true'] {
  background-color: #ffd3e3;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<div
    aria-controls=":rf:"
    aria-describedby=":rf:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="0"
  >
    <label
      aria-disabled="false"
      class="cache-r95p0q-StyledLabel e1wstm610"
    >
      <div
        class="cache-155uuxj-Stack ehpbis70"
      >
        <div
          class="cache-15fwcc4-StyledRow e3f5lzv0"
        >
          This is a label
        </div>
      </div>
      <div
        class="cache-izrm74-StyledToggle e1wstm612"
        data-checked="false"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          class="cache-1myp2ct-StyledCheckbox e1wstm611"
          id=":re:"
          name="test"
          type="checkbox"
          value=""
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;
